assets/css/style.css
/* Google font import */
@import url('https://fonts.googleapis.com/css2?family=Joan&family=Raleway:wght@200;300;400;500&family=Sacramento&display=swap');

/* General */
.bg-pink-blush {background-color: #f3e3e3;}

.bg-peach {background-color: #fee4d7;}

body {font-family: 'Joan', serif;
color: #134256;}

h5 {font-family: 'Joan', serif;
color: #134256;
text-transform: uppercase;}

.bodytext {padding: 20px 50px;
    color:#134256;
    font-family: 'Joan', serif;
    margin: auto;}

.bodyimage {padding: 20px 50px;
    margin: auto;
}

.herotext {
    padding: 25px;
    background-color: rgba(241, 163, 176, 0.6);
    font-weight: bold;
    border-radius: 15px;}

/*--Alert--*/

.alert-custom {background-color: #134256;
color: white;
margin-bottom: 0;
text-align: center;
font-family: 'Joan', serif;}

/* Header */
#mainlogo {float: left;
    font-size: 5vw;
    margin-left: 20px;
    font-family: 'Raleway', sans-serif;
    color: #134256;
    letter-spacing: -2px;}
    
#sublogo {float: left;
    font-size: 2.2vw;
    font-family: 'Sacramento', cursive;
    color: #134256;
    letter-spacing: 1px;}

#navigation {list-style-type: none;
    font-family: 'Joan', serif;
    color: #134256;}

#navigation li {
margin-right: 20px;}

.active {border-bottom: 2px solid}

#navigation a {text-decoration: none;
    color: inherit;}

#mainlogo, #sublogo {line-height: 100px;}

#navigation a:hover {border-bottom: 2px solid;}

.navbar .navbar-toggler-icon {background-image: url("https://img.icons8.com/ios/50/undefined/menu-squared-2--v1.png");}

/* Footer */

#footernav {list-style-type: none;
    font-family: 'Joan', serif;
    color: #134256;}

#footernav a {text-decoration: none;
color: inherit;
margin-right:5px}

#socialnav {list-style-type: none;}

#socialnav a {text-decoration: none;}

#socialnav li {display:inline-block;}

#footernav li {display: inline-block;}

/* Home page */

#home-hero-container {
    display: flex;
    background: url("../images/index.pinkjacket.2.jpg") no-repeat center center;
    background-size:cover;
    height: 100vh;
    max-height: 500px;
    align-items: center;
    justify-content: center;}

    
/* About page */

#about-hero-container { 
    display: flex;
    background: url("../images/about.womensitting2.jpg") no-repeat center center;
    background-size:cover;
    height: 100vh;
    max-height: 500px;
    align-items: center;
    justify-content: center;}

/* Contact page */

#contact-hero-container { 
    display: flex;
    background: url("../images/contact.meeting2.jpg") no-repeat center center;
    background-size:cover;
    height: 100vh;
    max-height: 500px;
    align-items: center;
    justify-content: center;}

#map {padding-top: 20px;
    padding-bottom: 30px;}

.form-button {text-align: center;
display: block;
margin: auto;
margin-top: 10px;}

.contactform {padding: 25px 50px;
    margin: auto;
background: white;
border: 1px solid;
width: 80%;
}

/* Visually hidden code snippet used to hide form label taken from W3 tutorial (https://www.w3.org/WAI/tutorials/forms/labels/#note-on-hiding-elements) */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
  }

/* Success page*/

.success-image {
    margin: auto;
    padding: 30px;
}

/* Media queries */

@media screen and (min-width: 768px) {
    .contactform {padding: 25px 50px;
        margin: auto;
        background: white;
        border: 1px solid;
        max-width: 80%; }
    
}

@media screen and (min-width: 1000px) {
    .contactform {padding: 25px 50px;
    margin: auto;
    background: white;
    border: 1px solid;
    max-width: 40%; }
}

@media screen and (min-width: 600px) {
    #home-hero-container {
        display: flex;
        background: url("../images/index.pinkjacket.1.jpg") no-repeat center center;
        background-size:cover;
        height: 120vh;
        max-height: 800px;
        align-items: center;
        justify-content: center;}

}

@media screen and (min-width: 1000px) {
    #home-hero-container {
        display: flex;
        background: url("../images/index.pinkjacket.1.jpg") no-repeat center center;
        background-size:cover;
        height: 220vh;
        max-height: 1000px;
        align-items: center;
        justify-content: center;}

}

@media screen and (min-width: 600px) {
    #about-hero-container {
        display: flex;
        background: url("../images/about.womensitting1.jpg") no-repeat center center;
        background-size:cover;
        height: 120vh;
        max-height: 800px;
        align-items: center;
        justify-content: center;}

}

@media screen and (min-width: 1000px) {
    #about-hero-container {
        display: flex;
        background: url("../images/about.womensitting1.jpg") no-repeat center center;
        background-size:cover;
        height: 220vh;
        max-height: 1000px;
        align-items: center;
        justify-content: center;}

}

@media screen and (min-width: 600px) {
    #contact-hero-container {
        display: flex;
        background: url("../images/contact.meeting1.jpg") no-repeat center center;
        background-size:cover;
        height: 120vh;
        max-height: 800px;
        align-items: center;
        justify-content: center;}

}

@media screen and (min-width: 1000px) {
    #contact-hero-container {
        display: flex;
        background: url("../images/contact.meeting1.jpg") no-repeat center center;
        background-size:cover;
        height: 220vh;
        max-height: 1000px;
        align-items: center;
        justify-content: center;}

}

@media screen and (min-width: 600px) {
    .success-image {
    margin: auto;
    padding: 100px 250px;}
}

